--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,44 +1,44 @@
-// // heart
+// heart
 
-// <i class="fa-thin fa-heart"></i>
+<i class="fa-thin fa-heart"></i>
 
-// // l-arrow
+// l-arrow
 
-// <i class="fa-sharp fa-regular fa-arrow-left"></i>
+<i class="fa-sharp fa-regular fa-arrow-left"></i>
 
 
-// // handshake
+// handshake
 
-// <i class="fa-light fa-handshake-angle"></i>
+<i class="fa-light fa-handshake-angle"></i>
 
-// // ustensils
+// ustensils
 
-// <i class="fa-regular fa-utensils"></i>
+<i class="fa-regular fa-utensils"></i>
 
-// //  list
+//  list
 
-// <i class="fa-solid fa-list"></i>
+<i class="fa-solid fa-list"></i>
 
-// // mobile
+// mobile
 
-// <i class="fa-solid fa-mobile-screen"></i>
+<i class="fa-solid fa-mobile-screen"></i>
 
-// // store
+// store
 
-// <i class="fa-solid fa-store"></i>
+<i class="fa-solid fa-store"></i>
 
-// // location
+// location
 
-// <i class="fa-sharp fa-solid fa-location-dot"></i>
+<i class="fa-sharp fa-solid fa-location-dot"></i>
 
-// // circle-1
+// circle-1
 
-// <i class="fa-solid fa-1"></i>
+<i class="fa-solid fa-1"></i>
 
-// // circle-2
+// circle-2
 
-// <i class="fa-solid fa-2"></i>
+<i class="fa-solid fa-2"></i>
 
-// // circle-3
+// circle-3
 
-// <i class="fa-solid fa-3"></i>
+<i class="fa-solid fa-3"></i>
