--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,7 +12,7 @@ $color-tertiary: #99E2D0;
 // background
 
 $bg-color-primary: #F7F7F7;
-$bg-color-secondary: #EAEAEA;
+$bg-color-secondary: #030000;
 
 // card
 
@@ -21,3 +21,10 @@ $right: 5px;
 $bottom: 5px;
 $size: 5px;
 $color: #E5E5E5;
+
+// typography
+
+$color-typo: #000;
+$size-typo-h1: 3em;
+$size-typo-h2: 2em;
+$size-typo-h3: 1em;
