--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,20 @@
-.body {
-    background-color: red;
-    width: 767px;
+html {
+    width: 1000px;
+    height: 100%;
 }
+
+body {
+    width: 800px;
+    height: 100%;
+    margin: 0 auto;
+  }
+  
+  .wrapper {
+    width: 767px;
+    margin: 0 auto;
+  }
+  
+  img {
+    object-fit: cover;
+    width: 300px;
+  }
