--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,11 +8,16 @@ $font-secondary: 'Roboto', sans-serif;
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+$color-light: #fff;
+$color-dark: #000;
+
 
 // background
 
-$bg-color-primary: #F7F7F7;
+$bg-color-primary: #EAEAEA;
 $bg-color-secondary: #030000;
+$bg-color-tertiary: #F6F6F6;
+
 
 // card
 
