problème de css

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,14 +1,17 @@
 h1 {
     font-size: $size-typo-h1;
     color: $color-typo;
+    font-weight: bold;
 }
 
 h2 {
     font-size: $size-typo-h2;
     color: $color-typo;
+    font-weight: bold;
 }
 
 h3 {
     font-size: $size-typo-h3;
     color: $color-typo;
+    font-weight: bold;
 }
