--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,7 @@
         height: 23px;
         &__img {
             width: 166px;
-            object-fit: cover;
+            height: auto;
         }
     }
     &__icon {
