--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,19 +1,19 @@
 // // heart
 
-// <i class="fa-thin fa-heart"></i>
+// <i class="fa-regular fa-heart"></i>
 
 // // l-arrow
 
-// <i class="fa-sharp fa-regular fa-arrow-left"></i>
+// <i class="fa-solid fa-arrow-left"></i>
 
 
 // // handshake
 
-// <i class="fa-light fa-handshake-angle"></i>
+// <i class="fa-solid fa-handshake-angle"></i>
 
 // // ustensils
 
-// <i class="fa-regular fa-utensils"></i>
+// <i class="fa-solid fa-utensils"></i>
 
 // //  list
 
@@ -21,7 +21,7 @@
 
 // // mobile
 
-// <i class="fa-solid fa-mobile-screen"></i>
+// <i class="fa-solid fa-mobile"></i>
 
 // // store
 
@@ -29,7 +29,7 @@
 
 // // location
 
-// <i class="fa-sharp fa-solid fa-location-dot"></i>
+// <i class="fa-solid fa-location-dot"></i>
 
 // // circle-1
 
