--- a/sass/layout/_section-reservation.scss
+++ b/sass/layout/_section-reservation.scss
@@ -12,9 +12,11 @@
         height: 40px;
     }
     &__btn {
+        display: block;
         @include card;
         width: 218px;
         height: 50px;
         background: linear-gradient(to top left, $color-primary, $color-secondary);
+        color: $color-light;
     }
 }
