probleme css suite

--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,48 +1,10 @@
-// // heart
+.header__icon {
+    width: 16px;
+    height: 116px;  
+}
 
-// <i class="fa-regular fa-heart"></i>
-
-// // l-arrow
-
-// <i class="fa-solid fa-arrow-left"></i>
-
-
-// // handshake
-
-// <i class="fa-solid fa-handshake-angle"></i>
-
-// // ustensils
-
-// <i class="fa-solid fa-utensils"></i>
-
-// //  list
-
-// <i class="fa-solid fa-list"></i>
-
-// // mobile
-
-// <i class="fa-solid fa-mobile"></i>
-
-// // store
-
-// <i class="fa-solid fa-store"></i>
-
-// // location
-
-// <i class="fa-solid fa-location-dot"></i>
-
-// // circle-1
-
-// <i class="fa-solid fa-1"></i>
-
-// // circle-2
-
-// <i class="fa-solid fa-2"></i>
-
-// // circle-3
-
-// <i class="fa-solid fa-3"></i>
-
-// check
-
-// <i class="fa-solid fa-check"></i>
+.functioning__icon {
+    width: 24px;
+    height: 24px;
+    color: $color-primary;
+}
