--- a/sass/layout/_section-reservation.scss
+++ b/sass/layout/_section-reservation.scss
@@ -10,13 +10,14 @@
     &__p {
         width: 305px;
         height: 40px;
-    }
-    &__btn {
-        display: block;
-        @include card;
-        width: 218px;
-        height: 50px;
-        background: linear-gradient(to top left, $color-primary, $color-secondary);
-        color: $color-light;
-    }
+    } 
+}
+
+.reservation-btn {
+    display: block;
+    @include card (5px, 5px, 3px, $color-dark);
+    width: 218px;
+    height: 50px;
+    background: linear-gradient(to top left, $color-primary, $color-secondary);
+    color: $color-light;
 }
