--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
     width: 375px;
     height: 197px;
     background: $color-dark;
-    &__logo {
+    &__logo__img {
         color: $color-light;
     }
 }
