--- a/sass/layout/_functioning.scss
+++ b/sass/layout/_functioning.scss
@@ -1,7 +1,9 @@
+
 .functioning {
     width: 375px;
     height: 440px;
-    &__card {
+    @extend %flex-center;
+    &__card {    
         @include card;
         background: $bg-color-primary;
         width: 325px;
