--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ body {
 
 img {
   object-fit: cover;
+  object-position: center;
   width: 300px;
   height: auto;
 }
@@ -141,4 +142,10 @@ h3 {
   width: 218px;
   height: 50px;
   background: linear-gradient(to top left, #9356DC, #FF79DA);
+}
+
+.footer {
+  width: 375px;
+  height: 197px;
+  background: black;
 }
